--- a/bookcover/myapp/static/index.html
+++ b/bookcover/myapp/static/index.html
@@ -1,37 +1,3 @@
-# Ex.06 Book Front Cover Page Design
-## Date: 15/5/2025
-
-## AIM:
-To design a book front cover page using HTML and CSS.
-
-## DESIGN STEPS:
-
-### Step 1:
-Create a Django Admin project.
-
-### Step 2:
-Create an app in the Django interface.
-
-### Step 3:
-Create a folder named 'static' in the app folder.
-
-### Step 4:
-Create a new HTML file in the static folder.
-
-### Step 5:
-Write the HTML code with relevant CSS properties.
-
-### Step 6:
-Choose the appropriate style and color scheme.
-
-### Step 7:
-Insert the images in their appropriate places.
-
-### Step 8:
-Publish the website in the LocalHost.
-
-## PROGRAM:
-```html
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -46,7 +12,7 @@ Publish the website in the LocalHost.
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
-        background-color:rgb(196, 33, 33);
+        background-color: #3b3b3b;
         color: white;
         display: flex;
         justify-content: center;
@@ -57,7 +23,7 @@ Publish the website in the LocalHost.
       .cover {
         width: 29vw;
         height: 79vh;
-        background-color: #232323;
+        background-color: #1543f9;
         border: white;
         padding: 20px;
         box-sizing: border-box;
@@ -97,7 +63,7 @@ Publish the website in the LocalHost.
       }
 
       .about {
-        background-color: #232323;
+        background-color: #23232300;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -184,6 +150,7 @@ Publish the website in the LocalHost.
       <div class="bottom-section">
         <div class="edition">Fourth Edition</div>
         <br />
+        <br>
       </div>
       <div class="rulerL"></div>
       <div class="about">
@@ -193,10 +160,3 @@ Publish the website in the LocalHost.
     </div>
   </body>
 </html>
-```
-
-## OUTPUT:
-![alt text](image.png)
-
-## RESULT:
-The program for designing book front cover page using HTML and CSS is completed successfully.
